# nokube

./: .gitignore  LICENSE  MANIFEST.in  README.md  debug_system_config.py  install.sh  install_ray.sh  kube-template.yaml  pyproject.toml  ray-template.yaml  test_logging.py
.nokube/: config.yaml
docs/: ray-remote-deployment.md
examples/: logging_demo.py  remote-ray-config.yaml
examples/cluster-status/: README.md  k8s-config.yaml  ray-config.yaml
examples/git-watcher/: .gitignore  PROXY-SETUP.md  README-deployment-fix.md  README.md  auto_deployer.py  config_scanner.py  git_watcher.py  manage_clusters.py  prepare_watcher.py  repos.yaml  start_watcher.py  test_deployment.py  watcher-deployment.yaml
examples/monitoring-demo/: README.md  app.yaml
examples/registry/: README.md  deployment.yaml  kustomization.yaml  pvc.yaml  secret.yaml  service.yaml
examples/sing-box/: README.md  configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
src/: actor_utils.py  cli.py  cluster_manager.py  config.py  config_manager.py  deployer.py  etcd_manager.py  monitor.py  ray_cluster_manager.py  ray_kube_controller.py  ssh_manager.py  yaml_converter.py
src/remote_lib/: __init__.py  ensure_system_config.py  ray_remote.py  utils.py
templates/: k8s-cluster.yaml  ray-cluster.yaml
